Bug-Fixes
- UrL Protocol added to team invite link
- Team invite directly adds user to org
- Firefox calendar fix
- disable y-scrollbar on dashboard org list

--- a/static/styles.css
+++ b/static/styles.css
@@ -333,7 +333,7 @@ section.home-orgs {
   display: flex;
   gap: 1rem;
   flex-wrap: nowrap;
-  overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 section.home-orgs > * {
